# matchmaking-backend

./: .gitignore  CMakeLists.txt  Dockerfile.server  Dockerfile.server.runtime  Dockerfile.simulator  Dockerfile.simulator.runtime  LICENSE  README.md  docker-compose.yml  matches.jsonl
.github/workflows/: ci.yml
config/: server_config.json  sim_config.json
proto/: matchmaker.proto
src/: CMakeLists.txt  main.cpp  server.cpp  server.h
src/Engine/: Engine.cpp  Engine.h  EngineConfig.cpp  EngineConfig.h  MatchBuilder.cpp  MatchBuilder.h  MatchPersistence.cpp  MatchPersistence.h  PlayerEntry.h
src/simulator/: SimConfig.cpp  SimConfig.h  SimulatorClient.cpp  SimulatorClient.h  main_simulator.cpp
tests/: MatchBuilderTests.cpp
